--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                                 Algorithm
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <li><a class="dropdown-item" href="project-1.html">Working Principle(for non coders)</a></li>
-                                <li><a class="dropdown-item" href="project-2.html">Linking Number Computation(for coders)</a></li>
-                                <li><a class="dropdown-item" href="project-3.html">Interlinked Loops</a></li>
-                                <li><a class="dropdown-item" href="project-3.html">N-component Hopf rings</a></li>
-                                <li><a class="dropdown-item" href="project-3.html">User Manuals</a></li>
-                                <li><a class="dropdown-item" href="project-3.html">Visuals</a></li>
+                                <li><a class="dropdown-item" href="algorithm/workingprinciple.html">Working Principle(for non coders)</a></li>
+                                <li><a class="dropdown-item" href="algorithm/linkingnum.html">Linking Number Computation(for coders)</a></li>
+                                <li><a class="dropdown-item" href="algorithm/interlink.html">Interlinked Loops</a></li>
+                                <li><a class="dropdown-item" href="algorithm/ncomp.html">N-component Hopf rings</a></li>
+                                <li><a class="dropdown-item" href="algorithm/visuals.html">Visuals</a></li>
+                                <li><a class="dropdown-item" href="algorithm/usermanual.html">User Manual</a></li>
                             </ul>
                         </li>
                         <!-- Contact -->
