--- a/algorithm/workingprinciple.html
+++ b/algorithm/workingprinciple.html
@@ -19,22 +19,22 @@
                 or link as its surface boundary. These surfaces are named after him and are called Seifert Surfaces.
             </p>
             <p>
-                Look at the images shown below in Figure 1. In the first image, there is an orientable surface with 
+                Look at the images shown below. In the first image, there is an orientable surface with 
                 the Borromean ring as its boundary. In the second image, there is an orientable surface with the Hopf link as its boundary. 
                 In the last image, there are two sides of an orientable disk surface with the unknot as its boundary.
             </p>
 
             <div class="image-gallery">
                 <figure>
-                    <img src="Borromean_Seifert_surface.png" alt="Borromean Seifert Surface" class="img-fluid">
+                    <img src="algorithm/image/Borromean_Seifert_surface.png" alt="Borromean Seifert Surface" class="img-fluid">
                     <figcaption>The Seifert surface of the Borromean ring with white and blue representing the two sides of the orientable surface.</figcaption>
                 </figure>
                 <figure>
-                    <img src="seifert_hopf.png" alt="Seifert Surface of Hopf Link" class="img-fluid">
+                    <img src="algorithm/image/seifert hopf.png" alt="Seifert Surface of Hopf Link" class="img-fluid">
                     <figcaption>The Seifert surface of the Hopf link with two colors showing the orientable surface.</figcaption>
                 </figure>
                 <figure>
-                    <img src="seifert_unknot.png" alt="Seifert Surface of Unknot" class="img-fluid">
+                    <img src="algorithm/image/seifert unknot.png" alt="Seifert Surface of Unknot" class="img-fluid">
                     <figcaption>The Seifert surface of a single unknot, showing both sides of the surface separately.</figcaption>
                 </figure>
             </div>
@@ -46,7 +46,7 @@
             </p>
 
             <div class="image-center">
-                <img src="m3.1.jpg" alt="Link of two oriented trefoils" class="img-fluid">
+                <img src="algorithm/image/m3.1.jpg" alt="Link of two oriented trefoils" class="img-fluid">
                 <figcaption>Link of two oriented trefoils</figcaption>
             </div>
 
@@ -59,17 +59,24 @@
 
             <h3 class="subheading">Linking Number of Unlink</h3>
             <div class="image-center">
-                <img src="Unlink_Link_1.png" alt="Linking Number 0 for an Unlink" class="img-fluid">
-                <figcaption>Linking Number 0 for an Unlink</figcaption>
+                <figure>
+                    <img src="algorithm/image/Unlink Link 1.png" alt="Linking Number 0 for an Unlink" class="img-fluid">
+                    <figcaption>Linking Number 0 for an Unlink</figcaption>
+                </figure>
+                <figure>
+                    <img src="algorithm/image/deformations of unlink.png" alt="Linking Number 0 for an Unlink" class="img-fluid">
+                    <figcaption>Linking Number 0 for any deformation for an Unlink</figcaption>
+                </figure>
+                
             </div>
             <p>The linking number for an unlink is always 0, regardless of the deformations, as the loops do not cross each other’s Seifert surfaces.</p>
 
             <h3 class="subheading">Linking Number of Hopf Link</h3>
             <div class="image-center">
-                <img src="hopf_link_diff_orien.png" alt="Different Orientations of Hopf Link" class="img-fluid">
+                <img src="algorithm/image/hopf link diff orien.png" alt="Different Orientations of Hopf Link" class="img-fluid">
                 <figcaption>Four possible orientations of the Hopf Link</figcaption>
             </div>
-            <p>The linking number for the Hopf link is 1, independent of its orientation or deformation. This distinguishes it topologically from an unlink.</p>
+            <p>The linking number for the Hopf link is 1, independent of its orientation or deformation, since  it  crosses the blue seifert surface once, either top to bottom or bottom to top. This distinguishes it topologically from an unlink.</p>
         </div>
     </section>
 </body>
