--- a/topology/equivalence.html
+++ b/topology/equivalence.html
@@ -41,7 +41,13 @@
         </p>
 
         <h2>A General Outline of How Knot Theory Deals with the Equivalence Problem</h2>
-
+        <div class="image-gallery"></div>
+            <figure>
+                <img src="equivimg/GENERAL OUTLINE OF KNOT THEORY .png" alt="Comparision of different knots" width="100%">
+                <figcaption>Comparision of different knots</figcaption>
+            </figure>
+            
+        </div>
         <p>
             We take two knots, <strong>K1</strong> and <strong>K2</strong>. Suppose they are different knots, but we are not told about it. So where and how do we start?
         </p>
