--- a/algorithm/workingprinciple.html
+++ b/algorithm/workingprinciple.html
@@ -46,8 +46,11 @@
             </p>
 
             <div class="image-center">
-                <img src="algorithm/image/m3.1.jpg" alt="Link of two oriented trefoils" class="img-fluid">
-                <figcaption>Link of two oriented trefoils</figcaption>
+                <figure>
+                    <img src="algorithm/image/m3.1.jpg" alt="Link of two oriented trefoils" class="img-fluid">
+                    <figcaption>Link of two oriented trefoils</figcaption>
+                </figure>
+                
             </div>
 
             <p>
