--- a/algorithm/workingprinciple.html
+++ b/algorithm/workingprinciple.html
@@ -76,8 +76,11 @@
 
             <h3 class="subheading">Linking Number of Hopf Link</h3>
             <div class="image-center">
-                <img src="algorithm/image/hopf link diff orien.png" alt="Different Orientations of Hopf Link" class="img-fluid">
-                <figcaption>Four possible orientations of the Hopf Link</figcaption>
+                <figure>
+                    <img src="algorithm/image/hopf link diff orien.png" alt="Different Orientations of Hopf Link" class="img-fluid">
+                    <figcaption>Four possible orientations of the Hopf Link</figcaption>
+                </figure>
+                
             </div>
             <p>The linking number for the Hopf link is 1, independent of its orientation or deformation, since  it  crosses the blue seifert surface once, either top to bottom or bottom to top. This distinguishes it topologically from an unlink.</p>
         </div>
