--- a/algorithm/workingprinciple.html
+++ b/algorithm/workingprinciple.html
@@ -47,7 +47,7 @@
 
             <div class="image-center">
                 <figure>
-                    <img src="image/m3.1.jpg" alt="Link of two oriented trefoils" class="img-fluid">
+                    <img src="image/m.jpg" alt="Link of two oriented trefoils" class="img-fluid">
                     <figcaption>Link of two oriented trefoils</figcaption>
                 </figure>
                 
