--- a/algorithm/usermanual.html
+++ b/algorithm/usermanual.html
@@ -16,7 +16,7 @@
                 <h3 class="subheading">Linkage</h3>
                 <p>ratul is hpiuj good</p>
                 <p>For more information, visit the following link:</p>
-                <a href="https://www.example.com" target="_blank" class="hyperlink">Visit Example Website</a>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/linkage/README.md" target="_blank" class="hyperlink">Visit Example Website</a>
             </div>
         </div>
     </section>
