--- a/algorithm/usermanual.html
+++ b/algorithm/usermanual.html
@@ -14,9 +14,21 @@
             <hr class="divider">
             <div class="content">
                 <h3 class="subheading">Linkage</h3>
-                <p>ratul is hpiuj good</p>
-                <p>For more information, visit the following link:</p>
-                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/linkage/README.md" target="_blank" class="hyperlink">Visit Example Website</a>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/linkage/Linkage.py" target="_blank" class="hyperlink">Click here to access the linkage.py script</a>
+                <p>Click in the link below and follow the instructions given to execute the above script </p>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/linkage/README.md" target="_blank" class="hyperlink">Usage</a>
+            </div>
+            <div class="content"></div>
+                <h4 class="subheading">Interlinked</h4>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/interlinked/Interlinked.py" target="_blank" class="hyperlink">Click here to access the interlinked.py script</a>
+                <p>Click in the link below and follow the instructions given to execute the above script </p>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/interlinked/README.md" target="_blank" class="hyperlink">Usage</a>
+            </div>
+            <div class="content"></div>
+                <h5 class="subheading">N component Hopf rings</h5>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/n-component/n_component_HELICITY.py" target="_blank" class="hyperlink">Click here to access the n_component_HELICITY.py script</a>
+                <p>Click in the link below and follow the instructions given to execute the above script </p>
+                <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/n-component/README.md" target="_blank" class="hyperlink">Usage</a>
             </div>
         </div>
     </section>
