--- a/algorithm/usermanual.html
+++ b/algorithm/usermanual.html
@@ -19,15 +19,15 @@
                 <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/linkage/README.md" target="_blank" class="hyperlink">Usage</a>
             </div>
             <hr class="divider">
-            <div class="content"></div>
-                <h4 class="subheading">Interlinked</h4>
+            <div class="content">
+                <h3 class="subheading">Interlinked</h3>
                 <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/interlinked/Interlinked.py" target="_blank" class="hyperlink">Click here to access the interlinked.py script</a>
                 <p>Click in the link below and follow the instructions given to execute the above script </p>
                 <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/interlinked/README.md" target="_blank" class="hyperlink">Usage</a>
             </div>
             <hr class="divider">
-            <div class="content"></div>
-                <h5 class="subheading">N component Hopf rings</h5>
+            <div class="content">
+                <h3 class="subheading">N Component Hopf Rings</h3>
                 <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/n-component/n_component_HELICITY.py" target="_blank" class="hyperlink">Click here to access the n_component_HELICITY.py script</a>
                 <p>Click in the link below and follow the instructions given to execute the above script </p>
                 <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/n-component/README.md" target="_blank" class="hyperlink">Usage</a>
@@ -37,3 +37,4 @@
 
 </body>
 </html>
+
