--- a/algorithm/visuals.html
+++ b/algorithm/visuals.html
@@ -10,7 +10,7 @@
 
     <section class="gallery-section">
         <div class="container">
-            <h2 class="main-heading">Visuals of outputs</h2>
+            <h2 class="main-heading">Visuals of Outputs</h2>
             <hr class="divider">
             <div class="gallery-grid">
                 <!-- Images 1 to 6 -->
