--- a/algorithm/interlink.html
+++ b/algorithm/interlink.html
@@ -17,11 +17,11 @@
             
             <div class="image-gallery">
                 <div class="gallery-item">
-                    <img src="images/interlinked3.png" alt="Four loops interlinked with each other.">
+                    <img src="image/interlinked3.png" alt="Four loops interlinked with each other.">
                     <figcaption>Figure 1: Four loops interlinked with each other.</figcaption>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/interlinked.png" alt="Removing one loop reduces the number of links from three to one.">
+                    <img src="image/interlinked.png" alt="Removing one loop reduces the number of links from three to one.">
                     <figcaption>Figure 2: Removing one loop reduces the number of links from three to one.</figcaption>
                 </div>
             </div>
