--- a/algorithm/interlink.html
+++ b/algorithm/interlink.html
@@ -44,6 +44,8 @@ The number of links identified is 1
 
         </div>
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
