--- a/algorithm/usermanual.html
+++ b/algorithm/usermanual.html
@@ -34,7 +34,9 @@
             </div>
         </div>
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
