--- a/algorithm/workingprinciple.html
+++ b/algorithm/workingprinciple.html
@@ -85,5 +85,8 @@
             <p>The linking number for the Hopf link is 1, independent of its orientation or deformation, since  it  crosses the blue seifert surface once, either top to bottom or bottom to top. This distinguishes it topologically from an unlink.</p>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
