--- a/topology/equivalence.html
+++ b/topology/equivalence.html
@@ -69,6 +69,8 @@
         </p>
 
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
