--- a/topology/knots.html
+++ b/topology/knots.html
@@ -64,6 +64,8 @@
 
         
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
