--- a/topology/linkingnumber.html
+++ b/topology/linkingnumber.html
@@ -40,6 +40,8 @@
         </ol>
 
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
