--- a/algorithm/ncomp.html
+++ b/algorithm/ncomp.html
@@ -87,5 +87,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
