--- a/algorithm/visuals.html
+++ b/algorithm/visuals.html
@@ -89,6 +89,8 @@
             </div>
         </div>
     </section>
-
+    <footer>
+        <p>&copy; 2024 Rupak Mukherjee. All rights reserved.</p>
+    </footer>
 </body>
 </html>
