--- a/topology/library.html
+++ b/topology/library.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Library of Knot Theory Resources</h1>
+        <h1>Library of LINKAGE Resources</h1>
         <p>Welcome to the LINKAGE Resources Library!. This page contains valuable resources for understanding and exploring knot theory, its applications, and tools for visualization. Each link offers a unique perspective or resource, ranging from educational videos and documentation to online tools and research papers.</p>
 
         <ul>
