--- a/topology/library.html
+++ b/topology/library.html
@@ -21,6 +21,7 @@
             <li><a href="http://katlas.org/wiki/Main_Page" target="_blank">KAtlas: Knot Atlas and Encyclopedia</a></li>
             <li><a href="https://docs.google.com/document/d/1VYb8XsiBpaK560GJ9qtF4VN1Ga_Np7iHUtzyOYdbJpg/edit" target="_blank">Google Docs: Knot Theory Notes and Research</a></li>
             <li><a href="https://arxiv.org/pdf/2409.19903" target="_blank">Knot-detection algorithm to measure viscosity in three-dimensional MHD plasmas</a></li>
+            <li><a href="https://vanwijk.win.tue.nl/seifertview/" target="_blank">SeifertView : Visualize seifert's surfaces of various complicated knots and links in 3D</a></li>
         </ul>
     </div>
     <footer>
